--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(MultiplayerGameProgramming)
 ########################################################################
 # System detection
 ########################################################################
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #include(CMake/MovingVisSystem.cmake)
 
 
